<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                            android:id="@+id/resultLayout">

    <TextView
            android:text="@string/dont_calculated_yet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tVmCx"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/tVmBx"
            app:layout_constraintBottom_toBottomOf="@+id/textView11" android:layout_marginBottom="0dp"/>
    <TextView
            android:text="@string/dont_calculated_yet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tVmBx" tools:layout_editor_absoluteY="123dp"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/tVmAx"
            app:layout_constraintBottom_toBottomOf="@+id/textView10" android:layout_marginBottom="0dp"/>
    <TextView
            android:text="@string/dont_calculated_yet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tVmAx"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/tvFuzzyNumberC"
            app:layout_constraintBottom_toBottomOf="@+id/textView9" android:layout_marginBottom="0dp"
    />
    <TextView
            android:text="@string/dont_calculated_yet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvFuzzyNumberC"
            app:layout_constraintLeft_toRightOf="@+id/textView7"
            android:layout_marginLeft="32dp" app:layout_constraintBottom_toBottomOf="@+id/textView7"
            android:layout_marginBottom="0dp"/>
    <TextView
            android:text="@string/m_c_x_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/textView10"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <TextView
            android:text="@string/m_b_x_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/textView9"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView9"/>
    <TextView
            android:text="@string/m_a_x_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/textView8"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:text="@string/enter_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/textView7"/>
    <TextView
            android:text="@string/fuzzy_number_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFind" app:layout_constraintLeft_toRightOf="@+id/etXvalue"
            android:layout_marginLeft="32dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/etXvalue"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="3"
            android:id="@+id/etXvalue"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/tvFuzzyNumberC"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"/>
</android.support.constraint.ConstraintLayout>