<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/enterOperandsLayout">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="3"
            android:id="@+id/etUBofB"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/etLFozzyOfB"
            android:layout_marginLeft="8dp" app:layout_constraintBottom_toBottomOf="@+id/etLFozzyOfB"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="3"
            android:id="@+id/etLFozzyOfB"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/etLBofB"
            android:layout_marginLeft="8dp" app:layout_constraintBottom_toBottomOf="@+id/etLBofB"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="3"
            android:id="@+id/etLBofB"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/textView3"
            android:layout_marginLeft="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="3"
            android:id="@+id/etUBofA"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/etFozzyOfA"
            android:layout_marginLeft="8dp" app:layout_constraintBottom_toBottomOf="@+id/etFozzyOfA"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="3"
            android:id="@+id/etFozzyOfA"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/etLBofA"
            android:layout_marginLeft="8dp" app:layout_constraintBottom_toBottomOf="@+id/etLBofA"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="3"
            android:id="@+id/etLBofA"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/textView2"
            android:layout_marginLeft="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/upper_boundary_of_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="@+id/etUBofA" app:layout_constraintBottom_toBottomOf="@+id/textView5"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/plural_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginLeft="24dp" app:layout_constraintLeft_toLeftOf="@+id/etFozzyOfA"
            app:layout_constraintBottom_toBottomOf="@+id/textView4" android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/lower_boundary_of_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="@+id/etLBofA" app:layout_constraintBottom_toBottomOf="@+id/textView"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/fuzzy_number_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintLeft_toLeftOf="@+id/textView2"
            android:layout_marginTop="29dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginLeft="0dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:text="@string/fuzzy_number_a"
            app:layout_constraintLeft_toLeftOf="@+id/textView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/enter_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            tools:layout_constraintTop_creator="1" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginTop="32dp" android:layout_marginStart="24dp"/>
    <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalculate" android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/etLFozzyOfB" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"/>
    <include android:layout_width="wrap_content" android:layout_height="wrap_content"
             layout="@layout/result_layout"
             android:layout_marginLeft="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/textView3" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/btnCalculate"/>
</android.support.constraint.ConstraintLayout>